fix marking invisible text

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ hr {
     position: relative;
     padding-left: 1em;
     text-align: left;
+    display: none
 }
 
 .navbar-nav {
